--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,7 @@
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+/* Sidebar */
 body {
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
@@ -13,27 +15,26 @@ a:focus {
     transition: all 0.3s;
 }
 
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
-
 .profilePic{
-    width: 100px;
-    margin-left: 80px;
+    display: block;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 50%;
 }
 
 .panterasLogo{
-    width: 90px;
+    width: 80px;
     float: right;
     margin-right: 20px;
+    margin-top: 10px;
 }
 
-.btn{
-  margin-left: 200px;
+.boton{
+  margin-left: 180px;
   margin-top: 5px;
   color: white;
-  background-color: #272343;
+  background-color: #343350;
 }
 
 .navIcon{
@@ -43,28 +44,28 @@ a:focus {
 }
 
 #sidebar {
-    width: 270px;
+    width: 230px;
     position: fixed;
     top: 0;
     left: 0;
     height: 100vh;
     z-index: 999;
-    background: #272343;
+    background: #343350;
     color: #fff;
     transition: all 0.3s;
     overflow-y: scroll;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
-    border-radius: 4%;
+    border-radius: 0 20px 20px 0;
 }
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #272343;
+    background: #343350;
 }
 
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #272343;
+    border-bottom: 1px solid #343350;
 }
 
 #sidebar ul p {
@@ -76,13 +77,13 @@ a:focus {
 
 #sidebar ul li a {
     padding: 10px;
-    font-size: 1rem;
+    font-size: 0.85rem;
     display: block;
     margin-top: 20px;
 }
 
 #sidebar ul li a:hover {
-    color: #272343;
+    color: #343350;
     background: #fff;
 }
 
@@ -120,13 +121,13 @@ a:focus {
 
 #sidebar.active .CTAs{
   background: rgba(0,0,0,0);
-  color: #272343;
+  color: #343350;
 }
 
 .CTAs{
-    background-color: #303f5c;
+    background-color: #474665;
     border-radius: 7%;
-    margin: 60px 15px 0 15px;
+    margin: 70px 15px 0 15px;
     padding-top: 10px;
     padding-bottom: 1px;
 }
@@ -137,15 +138,242 @@ ul.CTAs {
 
 .CTAs a {
     text-align: left;
-    font-size: 0.8em !important;
+    font-size: 0.75em !important;
     display: block;
     border-radius: 5px;
-    margin-bottom: 5px;
-    margin-left: 20px;
+    margin: 5px 0 5px 20px;
 }
 
 a.article,
 a.article:hover {
-    background: #383e56 !important;
+    background: #343350 !important;
     color: #fff !important;
+}
+
+/* -------------
+    General
+------------- */
+
+.top-prg{
+  float: left;
+  padding-top: 2px;
+}
+
+h3{
+  width: 30%;
+  float: left;
+}
+
+.top-btn {
+  margin-left: 10px;
+  margin-right: 10px;
+  float: left;
+}
+
+#content{
+  padding-left: 17%;
+  padding-top: 1.5%;
+}
+
+#content.active{
+  padding-left: 8%;
+}
+
+#content.active #search{
+  width: 25%;
+}
+
+.checkBx{
+  margin-left: 10px;
+  margin-right: 5px;
+}
+
+.navIconGen{
+  font-size: 30px;
+  margin-top: 5px;
+  margin-left: 25px;
+}
+
+.navIconGen:hover{
+  cursor: pointer;
+}
+
+#search{
+  border-radius: 30px;
+  margin-left: 25px;
+  border:1px solid grey;
+}
+
+input[type=text], select {
+  padding: 2px 20px;
+  outline: none;
+}
+
+/* Interactividad de recursos */
+
+.int-container{
+  border: 1px solid grey;
+  border-radius: 10px;
+  width: 70%;
+  margin-top: 25px;
+  float:left;
+}
+
+.int-container .filter{
+  float: right;
+  font-size: 15px;
+  margin-right: 100px;
+  margin-bottom: 0;
+}
+
+.downFilterBtn{
+  font-size: 12px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+.downFilter{
+  font-size: 12px;
+}
+
+.int-container h5{
+  margin: 10px 0 10px 10px;
+  width: 35%;
+  float: left;
+}
+
+.orderText{
+  float: left;
+  margin-top: 10px;
+  margin-left: 37%;
+}
+
+.int-container button{
+  float: right;
+}
+
+.int-container h6{
+  padding: 5px 0 5px 10px;
+  border-radius: 9px;
+}
+
+.mayor h6{
+  background-color: #cff6cf;
+  color: #184d47;
+}
+
+.menor h6{
+  background-color: #ffa5b0;
+  color: #900c3f;
+}
+
+.external{
+  border: 1px solid grey;
+  border-radius: 10px;
+  width: 46%;
+  margin-left: 23px;
+  margin-bottom: 20px;
+  float: left;
+}
+
+.int-elements {
+  border: 1px solid grey;
+  border-radius: 10px;
+  width: 93%;
+  margin-left: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 11px;
+}
+
+.int-subint{
+  margin-right: 30px;
+  margin-left: 10px;
+  height: 10px;
+}
+
+#content.active .int-subint{
+  margin-left: 15px;
+  margin-right: 35px;
+}
+
+/* Feed */
+
+.feedContainer{
+  float: right;
+  width: 26%;
+  margin-right: 25px;
+  margin-top: 25px;
+  border: 1px solid grey;
+  border-radius: 10px;
+  height: 650px;
+  overflow: auto;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #e4e3e3;
+  border-radius: 10px;
+  margin: 10px 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #dddddd;
+  border-radius: 10px;
+}
+
+.feedContainer h5{
+  width: 50%;
+  float: left;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.sortFeed{
+  font-size: 12px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  margin-right: 10px;
+  margin-top: 10px;
+  float: right;
+}
+
+.feedField{
+  width: 90%;
+  border: 1px solid grey;
+  border-radius: 10px;
+  height: auto;
+  margin: auto;
+  margin-bottom: 18px;
+}
+
+.feedField p{
+  margin-left: 10px;
+  font-size: 12px;
+  line-height: 0.1;
+}
+
+.feedFieldTitle{
+  height: 25px;
+  background-color: #cff6cf;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.topSectionStyle1{
+  float: left;
+  margin-right: 100;
+  margin-left: 10px;
+  margin-top: 2px;
+}
+
+.topSectionStyle2{
+  float: right;
+  margin-right: 10px;
+  margin-top: 2px;
 }
